# healpix-geo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  README.md  pixi.toml  pyproject.toml  tmp_test_notebook.ipynb
.github/workflows/: emscripten.yml  python-ci.yml  rust-ci.yml  wheels.yml
ci/rattler-recipe/: build.sh  prepare_recipe.py  recipe.yaml  recipe_template.yaml
ci/requirements/: docs.yaml  environment.yaml
docs/: api-hidden.rst  api.rst  conf.py  create_environment.py  environment_template.yml  index.md  installation.md  reference-system.md  terminology.md
docs/examples/: index.md
docs/healpix/: ellipsoidal-extension.md  healpix_levels.ipynb  healpix_levels.md  index.md
docs/scripts/: generate_healpix_levels_table.py  generate_latitude_authalic_mapping_errors.py  generate_latitude_diff_table.py  generate_latitude_graphic.py
docs/tutorials/: coordinate_conversion.md  coverage_queries.md  ellipsoid_basics.md  index.md  performance_optimization.md  quickstart.md  working_with_moc.md
docs/user-guide/: concepts.md  coordinates_systems.md  coverage_queries.md  ellipsoids.md  hierarchical_indexing.md  index.md  performance.md
docs/user_guide/: index.md
notebooks/: authalic_roundtrip_error_estimation.ipynb  critical_incidence_angle_map.ipynb
python/healpix-geo/: Cargo.toml  pixi.toml
python/healpix_geo/: __init__.py  auto.py  coordinates.py  nested.py  ring.py  slices.py  typing.py  utils.py  zuniq.py
src/: ellipsoid.rs  execution.rs  geometry.rs  healpix.rs  index.rs  lib.rs  slice_objects.rs
(+76 files in other folders)
