[package]
name = "healpix-geo"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "healpix_geo"
crate-type = ["cdylib"]

[dependencies]
cdshealpix = { version = "0.7.3" }
moc = "0.18.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
numpy = "0.25.0"
pyo3 = "0.25"
rayon = "1.10.0"
